# airseed

./: Cargo.toml  README.md  build.rs  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.md
docs/decisions/: index.md  offline-generation-environment.md
docs/reference/: workspace-layout.md
docs/runbook/: index.md  offline-generation.md
docs/spec/: cli.md  index.md  project-boundaries.md
scripts/: cross-check-address.mjs
src/: cli.rs  main.rs  wallet.rs
