[package]
authors     = ["Xavier Lau <x@acg.box>"]
build       = "build.rs"
categories  = []
description = "Offline-first wallet seed generator for air-gapped environments."
edition     = "2024"
homepage    = "https://hack.ink/airseed"
keywords    = ["airgap", "mnemonic", "offline", "wallet"]
license     = "GPL-3.0"
name        = "airseed"
readme      = "README.md"
repository  = "https://github.com/hack-ink/airseed"
resolver    = "3"
version     = "0.2.2"

[package.metadata.docs.rs]
all-features = true

[profile.final-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen-gitcl = { version = "9.1", features = ["cargo"] }

[dependencies]
# crates.io
bip32      = { version = "0.5" }
bip39      = { version = "2.2", features = ["rand_core"] }
clap       = { version = "4.6", features = ["derive"] }
color-eyre = { version = "0.6" }
rand_core  = { version = "0.6", features = ["getrandom"] }
sha3       = { version = "0.10" }
zeroize    = { version = "1.8" }
